// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SVG pattern snapshots > Bucket Hat > matches SVG snapshot 1`] = `
<svg
  aria-label="Bucket hat color preview"
  class="w-full"
  id="hat-snap"
  role="img"
  viewBox="0 0 400 360"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <pattern
      height="12"
      id="hat-snap-dots"
      patternUnits="userSpaceOnUse"
      width="12"
      x="0"
      y="0"
    >
      <circle
        cx="6"
        cy="6"
        fill="black"
        fill-opacity="0.055"
        r="1.6"
      />
    </pattern>
    <clippath
      id="hat-snap-crown-clip"
    >
      <path
        d="M 50,250 C 50,85 180,42 200,42 C 220,42 350,85 350,250 Z"
      />
    </clippath>
    <clippath
      id="hat-snap-brim-clip"
    >
      <rect
        height="36"
        rx="18"
        width="392"
        x="4"
        y="286"
      />
    </clippath>
  </defs>
  <ellipse
    cx="200"
    cy="350"
    fill="black"
    fill-opacity="0.07"
    rx="185"
    ry="10"
  />
  <ellipse
    cx="200"
    cy="322"
    fill="#DDD0BC"
    fill-opacity="0.55"
    rx="193"
    ry="17"
  />
  <rect
    fill="#DDD0BC"
    height="36"
    rx="18"
    width="392"
    x="4"
    y="286"
  />
  <ellipse
    cx="200"
    cy="286"
    fill="#DDD0BC"
    rx="196"
    ry="20"
  />
  <ellipse
    cx="200"
    cy="286"
    fill="url(#hat-snap-dots)"
    rx="196"
    ry="20"
  />
  <rect
    fill="url(#hat-snap-dots)"
    height="36"
    rx="18"
    width="392"
    x="4"
    y="286"
  />
  <rect
    fill="#C96B4A"
    height="46"
    width="300"
    x="50"
    y="244"
  />
  <line
    stroke="black"
    stroke-dasharray="8,5"
    stroke-opacity="0.06"
    stroke-width="1.5"
    x1="50"
    x2="350"
    y1="258"
    y2="258"
  />
  <line
    stroke="black"
    stroke-dasharray="8,5"
    stroke-opacity="0.06"
    stroke-width="1.5"
    x1="50"
    x2="350"
    y1="274"
    y2="274"
  />
  <rect
    fill="url(#hat-snap-dots)"
    height="46"
    width="300"
    x="50"
    y="244"
  />
  <path
    d="M 50,250 C 50,85 180,42 200,42 C 220,42 350,85 350,250 Z"
    fill="#DDD0BC"
  />
  <g
    clip-path="url(#hat-snap-crown-clip)"
  >
    <line
      stroke="black"
      stroke-dasharray="8,6"
      stroke-opacity="0.06"
      stroke-width="1.5"
      x1="0"
      x2="400"
      y1="80"
      y2="80"
    />
    <line
      stroke="black"
      stroke-dasharray="8,6"
      stroke-opacity="0.06"
      stroke-width="1.5"
      x1="0"
      x2="400"
      y1="110"
      y2="110"
    />
    <line
      stroke="black"
      stroke-dasharray="8,6"
      stroke-opacity="0.06"
      stroke-width="1.5"
      x1="0"
      x2="400"
      y1="140"
      y2="140"
    />
    <line
      stroke="black"
      stroke-dasharray="8,6"
      stroke-opacity="0.06"
      stroke-width="1.5"
      x1="0"
      x2="400"
      y1="168"
      y2="168"
    />
    <line
      stroke="black"
      stroke-dasharray="8,6"
      stroke-opacity="0.06"
      stroke-width="1.5"
      x1="0"
      x2="400"
      y1="196"
      y2="196"
    />
    <line
      stroke="black"
      stroke-dasharray="8,6"
      stroke-opacity="0.06"
      stroke-width="1.5"
      x1="0"
      x2="400"
      y1="222"
      y2="222"
    />
    <rect
      fill="url(#hat-snap-dots)"
      height="400"
      width="400"
      x="0"
      y="0"
    />
  </g>
  <line
    stroke="black"
    stroke-opacity="0.08"
    stroke-width="2"
    x1="50"
    x2="350"
    y1="250"
    y2="250"
  />
</svg>
`;

exports[`SVG pattern snapshots > Granny Square > matches SVG snapshot 1`] = `
<svg
  aria-label="Granny square color preview"
  class="w-full"
  id="granny-snap"
  role="img"
  viewBox="0 0 400 400"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <pattern
      height="12"
      id="granny-snap-dots"
      patternUnits="userSpaceOnUse"
      width="12"
      x="0"
      y="0"
    >
      <circle
        cx="6"
        cy="6"
        fill="black"
        fill-opacity="0.055"
        r="1.6"
      />
    </pattern>
    <clippath
      id="granny-snap-clip"
    >
      <rect
        height="400"
        rx="20"
        width="400"
        x="0"
        y="0"
      />
    </clippath>
  </defs>
  <g
    clip-path="url(#granny-snap-clip)"
  >
    <rect
      fill="#3A6B45"
      height="400"
      width="400"
      x="0"
      y="0"
    />
    <rect
      fill="#C96B4A"
      height="348"
      rx="14"
      width="348"
      x="26"
      y="26"
    />
    <rect
      fill="#3A6B45"
      height="50"
      rx="9"
      width="50"
      x="28"
      y="28"
    />
    <rect
      fill="#3A6B45"
      height="50"
      rx="9"
      width="50"
      x="322"
      y="28"
    />
    <rect
      fill="#3A6B45"
      height="50"
      rx="9"
      width="50"
      x="28"
      y="322"
    />
    <rect
      fill="#3A6B45"
      height="50"
      rx="9"
      width="50"
      x="322"
      y="322"
    />
    <rect
      fill="#7A9E7E"
      height="232"
      rx="8"
      width="232"
      x="84"
      y="84"
    />
    <rect
      fill="#C96B4A"
      height="30"
      rx="5"
      width="30"
      x="86"
      y="86"
    />
    <rect
      fill="#C96B4A"
      height="30"
      rx="5"
      width="30"
      x="284"
      y="86"
    />
    <rect
      fill="#C96B4A"
      height="30"
      rx="5"
      width="30"
      x="86"
      y="284"
    />
    <rect
      fill="#C96B4A"
      height="30"
      rx="5"
      width="30"
      x="284"
      y="284"
    />
    <circle
      cx="200"
      cy="200"
      fill="#D4A830"
      r="72"
    />
    <circle
      cx="280"
      cy="200"
      fill="#7A9E7E"
      fill-opacity="0.35"
      r="5"
    />
    <circle
      cx="256.5685424949238"
      cy="256.5685424949238"
      fill="#7A9E7E"
      fill-opacity="0.35"
      r="5"
    />
    <circle
      cx="200"
      cy="280"
      fill="#7A9E7E"
      fill-opacity="0.35"
      r="5"
    />
    <circle
      cx="143.4314575050762"
      cy="256.5685424949238"
      fill="#7A9E7E"
      fill-opacity="0.35"
      r="5"
    />
    <circle
      cx="120"
      cy="200"
      fill="#7A9E7E"
      fill-opacity="0.35"
      r="5"
    />
    <circle
      cx="143.4314575050762"
      cy="143.4314575050762"
      fill="#7A9E7E"
      fill-opacity="0.35"
      r="5"
    />
    <circle
      cx="199.99999999999997"
      cy="120"
      fill="#7A9E7E"
      fill-opacity="0.35"
      r="5"
    />
    <circle
      cx="256.5685424949238"
      cy="143.4314575050762"
      fill="#7A9E7E"
      fill-opacity="0.35"
      r="5"
    />
    <rect
      fill="url(#granny-snap-dots)"
      height="400"
      width="400"
      x="0"
      y="0"
    />
  </g>
</svg>
`;

exports[`SVG pattern snapshots > Market Tote > matches SVG snapshot 1`] = `
<svg
  aria-label="Market tote color preview"
  class="w-full"
  id="tote-snap"
  role="img"
  viewBox="0 0 400 420"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <pattern
      height="12"
      id="tote-snap-dots"
      patternUnits="userSpaceOnUse"
      width="12"
      x="0"
      y="0"
    >
      <circle
        cx="6"
        cy="6"
        fill="black"
        fill-opacity="0.055"
        r="1.6"
      />
    </pattern>
    <clippath
      id="tote-snap-body-clip"
    >
      <rect
        height="288"
        rx="12"
        width="276"
        x="62"
        y="94"
      />
    </clippath>
  </defs>
  <ellipse
    cx="200"
    cy="406"
    fill="black"
    fill-opacity="0.07"
    rx="132"
    ry="10"
  />
  <path
    d="M 114,94 C 114,22 174,22 174,94"
    fill="none"
    stroke="#C96B4A"
    stroke-linecap="round"
    stroke-width="22"
  />
  <path
    d="M 226,94 C 226,22 286,22 286,94"
    fill="none"
    stroke="#C96B4A"
    stroke-linecap="round"
    stroke-width="22"
  />
  <rect
    fill="#F5EDD8"
    height="288"
    rx="12"
    width="276"
    x="62"
    y="94"
  />
  <g
    clip-path="url(#tote-snap-body-clip)"
  >
    <rect
      fill="#7A9E7E"
      height="48"
      width="276"
      x="62"
      y="334"
    />
    <rect
      fill="url(#tote-snap-dots)"
      height="48"
      width="276"
      x="62"
      y="334"
    />
  </g>
  <line
    stroke="black"
    stroke-opacity="0.05"
    stroke-width="1.5"
    x1="62"
    x2="62"
    y1="106"
    y2="382"
  />
  <line
    stroke="black"
    stroke-opacity="0.05"
    stroke-width="1.5"
    x1="338"
    x2="338"
    y1="106"
    y2="382"
  />
  <line
    clip-path="url(#tote-snap-body-clip)"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.05"
    stroke-width="1"
    x1="68"
    x2="332"
    y1="130"
    y2="130"
  />
  <line
    clip-path="url(#tote-snap-body-clip)"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.05"
    stroke-width="1"
    x1="68"
    x2="332"
    y1="170"
    y2="170"
  />
  <line
    clip-path="url(#tote-snap-body-clip)"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.05"
    stroke-width="1"
    x1="68"
    x2="332"
    y1="210"
    y2="210"
  />
  <line
    clip-path="url(#tote-snap-body-clip)"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.05"
    stroke-width="1"
    x1="68"
    x2="332"
    y1="250"
    y2="250"
  />
  <line
    clip-path="url(#tote-snap-body-clip)"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.05"
    stroke-width="1"
    x1="68"
    x2="332"
    y1="290"
    y2="290"
  />
  <rect
    fill="url(#tote-snap-dots)"
    height="288"
    rx="12"
    width="276"
    x="62"
    y="94"
  />
  <rect
    fill="black"
    fill-opacity="0.06"
    height="14"
    rx="6"
    width="276"
    x="62"
    y="94"
  />
  <rect
    fill="#C96B4A"
    fill-opacity="0.5"
    height="18"
    rx="4"
    width="36"
    x="104"
    y="94"
  />
  <rect
    fill="#C96B4A"
    fill-opacity="0.5"
    height="18"
    rx="4"
    width="36"
    x="260"
    y="94"
  />
</svg>
`;

exports[`SVG pattern snapshots > Mitered Square > matches SVG snapshot 1`] = `
<svg
  aria-label="Mitered granny square color preview"
  class="w-full"
  id="mitered-snap"
  role="img"
  viewBox="0 0 400 400"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <pattern
      height="12"
      id="mitered-snap-dots"
      patternUnits="userSpaceOnUse"
      width="12"
      x="0"
      y="0"
    >
      <circle
        cx="6"
        cy="6"
        fill="black"
        fill-opacity="0.05"
        r="1.5"
      />
    </pattern>
    <clippath
      id="mitered-snap-inner-clip"
    >
      <rect
        height="324"
        rx="10"
        width="324"
        x="38"
        y="38"
      />
    </clippath>
  </defs>
  <rect
    fill="black"
    fill-opacity="0.07"
    height="364"
    rx="20"
    width="364"
    x="18"
    y="18"
  />
  <rect
    fill="#3A6B45"
    height="372"
    rx="18"
    width="372"
    x="14"
    y="14"
  />
  <rect
    fill="none"
    height="348"
    rx="16"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.06"
    stroke-width="1.5"
    width="348"
    x="26"
    y="26"
  />
  <g
    clip-path="url(#mitered-snap-inner-clip)"
  >
    <polygon
      fill="#D4A830"
      points="38,38 362,38 362,362"
    />
    <polygon
      fill="#7A9E7E"
      points="38,38 38,362 362,362"
    />
    <line
      stroke="black"
      stroke-dasharray="10,6"
      stroke-opacity="0.08"
      stroke-width="1.5"
      x1="38"
      x2="362"
      y1="38"
      y2="362"
    />
    <line
      stroke="black"
      stroke-dasharray="10,6"
      stroke-opacity="0.08"
      stroke-width="1.5"
      x1="54"
      x2="346"
      y1="54"
      y2="346"
    />
    <line
      stroke="black"
      stroke-dasharray="10,6"
      stroke-opacity="0.08"
      stroke-width="1.5"
      x1="70"
      x2="330"
      y1="70"
      y2="330"
    />
    <rect
      fill="url(#mitered-snap-dots)"
      height="324"
      width="324"
      x="38"
      y="38"
    />
  </g>
</svg>
`;

exports[`SVG pattern snapshots > Solid Square > matches SVG snapshot 1`] = `
<svg
  aria-label="Solid granny square color preview"
  class="w-full"
  id="solid-snap"
  role="img"
  viewBox="0 0 400 400"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <pattern
      height="12"
      id="solid-snap-dots"
      patternUnits="userSpaceOnUse"
      width="12"
      x="0"
      y="0"
    >
      <circle
        cx="6"
        cy="6"
        fill="black"
        fill-opacity="0.05"
        r="1.5"
      />
    </pattern>
  </defs>
  <rect
    fill="black"
    fill-opacity="0.07"
    height="364"
    rx="20"
    width="364"
    x="18"
    y="18"
  />
  <rect
    fill="#3A6B45"
    height="372"
    rx="18"
    width="372"
    x="14"
    y="14"
  />
  <rect
    fill="#7A9E7E"
    height="264"
    rx="12"
    width="264"
    x="68"
    y="68"
  />
  <rect
    fill="#D4A830"
    height="156"
    rx="8"
    width="156"
    x="122"
    y="122"
  />
  <rect
    fill="none"
    height="312"
    rx="16"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.06"
    stroke-width="1.5"
    width="312"
    x="44"
    y="44"
  />
  <rect
    fill="none"
    height="280"
    rx="16"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.06"
    stroke-width="1.5"
    width="280"
    x="60"
    y="60"
  />
  <rect
    fill="none"
    height="240"
    rx="10"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.06"
    stroke-width="1.5"
    width="240"
    x="80"
    y="80"
  />
  <rect
    fill="none"
    height="216"
    rx="10"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.06"
    stroke-width="1.5"
    width="216"
    x="92"
    y="92"
  />
  <rect
    fill="none"
    height="132"
    rx="6"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.06"
    stroke-width="1.5"
    width="132"
    x="134"
    y="134"
  />
  <rect
    fill="url(#solid-snap-dots)"
    height="372"
    rx="18"
    width="372"
    x="14"
    y="14"
  />
</svg>
`;

exports[`SVG pattern snapshots > Striped Square > matches SVG snapshot 1`] = `
<svg
  aria-label="Striped granny square color preview"
  class="w-full"
  id="striped-snap"
  role="img"
  viewBox="0 0 400 400"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <pattern
      height="12"
      id="striped-snap-dots"
      patternUnits="userSpaceOnUse"
      width="12"
      x="0"
      y="0"
    >
      <circle
        cx="6"
        cy="6"
        fill="black"
        fill-opacity="0.05"
        r="1.5"
      />
    </pattern>
  </defs>
  <rect
    fill="black"
    fill-opacity="0.07"
    height="364"
    rx="20"
    width="364"
    x="18"
    y="18"
  />
  <rect
    fill="#3A6B45"
    height="372"
    rx="18"
    width="372"
    x="14"
    y="14"
  />
  <rect
    fill="#C96B4A"
    height="272"
    rx="12"
    width="272"
    x="64"
    y="64"
  />
  <rect
    fill="#7A9E7E"
    height="172"
    rx="8"
    width="172"
    x="114"
    y="114"
  />
  <rect
    fill="#D4A830"
    height="72"
    rx="5"
    width="72"
    x="164"
    y="164"
  />
  <rect
    fill="none"
    height="352"
    rx="16"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.07"
    stroke-width="1.5"
    width="352"
    x="24"
    y="24"
  />
  <rect
    fill="none"
    height="252"
    rx="10"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.07"
    stroke-width="1.5"
    width="252"
    x="74"
    y="74"
  />
  <rect
    fill="none"
    height="152"
    rx="6"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.07"
    stroke-width="1.5"
    width="152"
    x="124"
    y="124"
  />
  <rect
    fill="none"
    height="52"
    rx="3"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.07"
    stroke-width="1.5"
    width="52"
    x="174"
    y="174"
  />
  <rect
    fill="url(#striped-snap-dots)"
    height="372"
    rx="18"
    width="372"
    x="14"
    y="14"
  />
</svg>
`;

exports[`SVG pattern snapshots > Sunflower > matches SVG snapshot 1`] = `
<svg
  aria-label="Sunflower granny square color preview"
  class="w-full"
  id="sunflower-snap"
  role="img"
  viewBox="0 0 400 400"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <pattern
      height="12"
      id="sunflower-snap-dots"
      patternUnits="userSpaceOnUse"
      width="12"
      x="0"
      y="0"
    >
      <circle
        cx="6"
        cy="6"
        fill="black"
        fill-opacity="0.05"
        r="1.5"
      />
    </pattern>
    <clippath
      id="sunflower-snap-sq-clip"
    >
      <rect
        height="372"
        rx="18"
        width="372"
        x="14"
        y="14"
      />
    </clippath>
  </defs>
  <rect
    fill="black"
    fill-opacity="0.07"
    height="364"
    rx="20"
    width="364"
    x="18"
    y="18"
  />
  <rect
    fill="#3A6B45"
    height="372"
    rx="18"
    width="372"
    x="14"
    y="14"
  />
  <circle
    cx="50"
    cy="50"
    fill="#C96B4A"
    fill-opacity="0.4"
    r="10"
  />
  <circle
    cx="350"
    cy="50"
    fill="#C96B4A"
    fill-opacity="0.4"
    r="10"
  />
  <circle
    cx="50"
    cy="350"
    fill="#C96B4A"
    fill-opacity="0.4"
    r="10"
  />
  <circle
    cx="350"
    cy="350"
    fill="#C96B4A"
    fill-opacity="0.4"
    r="10"
  />
  <g
    clip-path="url(#sunflower-snap-sq-clip)"
  >
    <path
      d="M 249.5,183.9 C 310,179 338,200 338,200 C 338,200 310,221 249.5,216.1 Z"
      fill="#C96B4A"
    />
    <path
      d="M 246.3,223.6 C 292.6,263 297.6,297.6 297.6,297.6 C 297.6,297.6 263,292.6 223.6,246.3 Z"
      fill="#C96B4A"
    />
    <path
      d="M 216.1,249.5 C 221,310 200,338 200,338 C 200,338 179,310 183.9,249.5 Z"
      fill="#C96B4A"
    />
    <path
      d="M 176.4,246.3 C 137,292.6 102.4,297.6 102.4,297.6 C 102.4,297.6 107.4,263 153.7,223.6 Z"
      fill="#C96B4A"
    />
    <path
      d="M 150.5,216.1 C 90,221 62,200 62,200 C 62,200 90,179 150.5,183.9 Z"
      fill="#C96B4A"
    />
    <path
      d="M 153.7,176.4 C 107.4,137 102.4,102.4 102.4,102.4 C 102.4,102.4 137,107.4 176.4,153.7 Z"
      fill="#C96B4A"
    />
    <path
      d="M 183.9,150.5 C 179,90 200,62 200,62 C 200,62 221,90 216.1,150.5 Z"
      fill="#C96B4A"
    />
    <path
      d="M 223.6,153.7 C 263,107.4 297.6,102.4 297.6,102.4 C 297.6,102.4 292.6,137 246.3,176.4 Z"
      fill="#C96B4A"
    />
    <path
      d="M 249.5,183.9 C 310,179 338,200 338,200 C 338,200 310,221 249.5,216.1 Z"
      fill="url(#sunflower-snap-dots)"
    />
    <path
      d="M 246.3,223.6 C 292.6,263 297.6,297.6 297.6,297.6 C 297.6,297.6 263,292.6 223.6,246.3 Z"
      fill="url(#sunflower-snap-dots)"
    />
    <path
      d="M 216.1,249.5 C 221,310 200,338 200,338 C 200,338 179,310 183.9,249.5 Z"
      fill="url(#sunflower-snap-dots)"
    />
    <path
      d="M 176.4,246.3 C 137,292.6 102.4,297.6 102.4,297.6 C 102.4,297.6 107.4,263 153.7,223.6 Z"
      fill="url(#sunflower-snap-dots)"
    />
    <path
      d="M 150.5,216.1 C 90,221 62,200 62,200 C 62,200 90,179 150.5,183.9 Z"
      fill="url(#sunflower-snap-dots)"
    />
    <path
      d="M 153.7,176.4 C 107.4,137 102.4,102.4 102.4,102.4 C 102.4,102.4 137,107.4 176.4,153.7 Z"
      fill="url(#sunflower-snap-dots)"
    />
    <path
      d="M 183.9,150.5 C 179,90 200,62 200,62 C 200,62 221,90 216.1,150.5 Z"
      fill="url(#sunflower-snap-dots)"
    />
    <path
      d="M 223.6,153.7 C 263,107.4 297.6,102.4 297.6,102.4 C 297.6,102.4 292.6,137 246.3,176.4 Z"
      fill="url(#sunflower-snap-dots)"
    />
  </g>
  <circle
    cx="200"
    cy="200"
    fill="#D4A830"
    r="48"
  />
  <circle
    cx="200"
    cy="200"
    fill="none"
    r="38"
    stroke="black"
    stroke-dasharray="8,5"
    stroke-opacity="0.08"
    stroke-width="1.5"
  />
  <circle
    cx="200"
    cy="200"
    fill="url(#sunflower-snap-dots)"
    r="48"
  />
  <rect
    fill="none"
    height="348"
    rx="16"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.06"
    stroke-width="1.5"
    width="348"
    x="26"
    y="26"
  />
</svg>
`;

exports[`SVG pattern snapshots > Turtle > matches SVG snapshot 1`] = `
<svg
  aria-label="Turtle amigurumi color preview"
  class="w-full"
  id="turtle-snap"
  role="img"
  viewBox="0 0 400 400"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <pattern
      height="10"
      id="turtle-snap-dots"
      patternUnits="userSpaceOnUse"
      width="10"
      x="0"
      y="0"
    >
      <circle
        cx="5"
        cy="5"
        fill="black"
        fill-opacity="0.06"
        r="1.4"
      />
    </pattern>
  </defs>
  <ellipse
    cx="200"
    cy="392"
    fill="black"
    fill-opacity="0.07"
    rx="150"
    ry="9"
  />
  <ellipse
    cx="75"
    cy="118"
    fill="#DDD0BC"
    rx="40"
    ry="78"
    transform="rotate(-42 75 118)"
  />
  <ellipse
    cx="75"
    cy="118"
    fill="url(#turtle-snap-dots)"
    rx="40"
    ry="78"
    transform="rotate(-42 75 118)"
  />
  <ellipse
    cx="325"
    cy="118"
    fill="#DDD0BC"
    rx="40"
    ry="78"
    transform="rotate(42 325 118)"
  />
  <ellipse
    cx="325"
    cy="118"
    fill="url(#turtle-snap-dots)"
    rx="40"
    ry="78"
    transform="rotate(42 325 118)"
  />
  <ellipse
    cx="84"
    cy="305"
    fill="#DDD0BC"
    rx="34"
    ry="62"
    transform="rotate(32 84 305)"
  />
  <ellipse
    cx="84"
    cy="305"
    fill="url(#turtle-snap-dots)"
    rx="34"
    ry="62"
    transform="rotate(32 84 305)"
  />
  <ellipse
    cx="316"
    cy="305"
    fill="#DDD0BC"
    rx="34"
    ry="62"
    transform="rotate(-32 316 305)"
  />
  <ellipse
    cx="316"
    cy="305"
    fill="url(#turtle-snap-dots)"
    rx="34"
    ry="62"
    transform="rotate(-32 316 305)"
  />
  <ellipse
    cx="200"
    cy="215"
    fill="#7A9E7E"
    rx="148"
    ry="130"
  />
  <ellipse
    cx="200"
    cy="215"
    fill="url(#turtle-snap-dots)"
    rx="148"
    ry="130"
  />
  <ellipse
    cx="200"
    cy="58"
    fill="#C8A878"
    rx="62"
    ry="54"
  />
  <ellipse
    cx="200"
    cy="58"
    fill="url(#turtle-snap-dots)"
    rx="62"
    ry="54"
  />
  <circle
    cx="178"
    cy="46"
    fill="black"
    fill-opacity="0.55"
    r="10"
  />
  <circle
    cx="222"
    cy="46"
    fill="black"
    fill-opacity="0.55"
    r="10"
  />
  <circle
    cx="180"
    cy="44"
    fill="white"
    fill-opacity="0.75"
    r="3"
  />
  <circle
    cx="224"
    cy="44"
    fill="white"
    fill-opacity="0.75"
    r="3"
  />
</svg>
`;

exports[`SVG pattern snapshots > Windmill > matches SVG snapshot 1`] = `
<svg
  aria-label="Windmill granny square color preview"
  class="w-full"
  id="windmill-snap"
  role="img"
  viewBox="0 0 400 400"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <pattern
      height="12"
      id="windmill-snap-dots"
      patternUnits="userSpaceOnUse"
      width="12"
      x="0"
      y="0"
    >
      <circle
        cx="6"
        cy="6"
        fill="black"
        fill-opacity="0.05"
        r="1.5"
      />
    </pattern>
    <clippath
      id="windmill-snap-sq-clip"
    >
      <rect
        height="372"
        rx="18"
        width="372"
        x="14"
        y="14"
      />
    </clippath>
  </defs>
  <rect
    fill="black"
    fill-opacity="0.07"
    height="364"
    rx="20"
    width="364"
    x="18"
    y="18"
  />
  <rect
    fill="#7A9E7E"
    height="372"
    rx="18"
    width="372"
    x="14"
    y="14"
  />
  <g
    clip-path="url(#windmill-snap-sq-clip)"
  >
    <path
      d="M 200,200 L 200,14 L 14,14 L 14,200 Z"
      fill="#C96B4A"
    />
    <path
      d="M 200,200 L 386,200 L 386,14 L 200,14 Z"
      fill="#7A9E7E"
    />
    <path
      d="M 200,200 L 200,386 L 386,386 L 386,200 Z"
      fill="#C96B4A"
    />
    <path
      d="M 200,200 L 14,200 L 14,386 L 200,386 Z"
      fill="#7A9E7E"
    />
    <path
      d="M 200,200 L 200,14 L 14,14 L 14,200 Z"
      fill="none"
      stroke="black"
      stroke-dasharray="10,7"
      stroke-opacity="0.06"
      stroke-width="1.5"
    />
    <path
      d="M 200,200 L 386,200 L 386,14 L 200,14 Z"
      fill="none"
      stroke="black"
      stroke-dasharray="10,7"
      stroke-opacity="0.06"
      stroke-width="1.5"
    />
    <path
      d="M 200,200 L 200,386 L 386,386 L 386,200 Z"
      fill="none"
      stroke="black"
      stroke-dasharray="10,7"
      stroke-opacity="0.06"
      stroke-width="1.5"
    />
    <path
      d="M 200,200 L 14,200 L 14,386 L 200,386 Z"
      fill="none"
      stroke="black"
      stroke-dasharray="10,7"
      stroke-opacity="0.06"
      stroke-width="1.5"
    />
    <rect
      fill="url(#windmill-snap-dots)"
      height="372"
      width="372"
      x="14"
      y="14"
    />
  </g>
  <circle
    cx="200"
    cy="200"
    fill="#D4A830"
    r="34"
  />
  <circle
    cx="200"
    cy="200"
    fill="none"
    r="24"
    stroke="black"
    stroke-dasharray="8,5"
    stroke-opacity="0.08"
    stroke-width="1.5"
  />
  <circle
    cx="200"
    cy="200"
    fill="url(#windmill-snap-dots)"
    r="34"
  />
  <rect
    fill="none"
    height="348"
    rx="16"
    stroke="black"
    stroke-dasharray="10,7"
    stroke-opacity="0.06"
    stroke-width="1.5"
    width="348"
    x="26"
    y="26"
  />
</svg>
`;
